Webservice in place, Tomee in place